2009-01-25 Enrico Weigelt <weigelt@metux.de>

	* edit/editcmd.c, src/cmd.c, src/ext.c, src/history.h:
	* src/hotlist.c, src/panelize.c, src/tree.c, src/user.c: 
	* src/view.c, vfs/ftpfs.c, vfs/utilvfs.c:
	  - Made history section names statically instead of dynamic
	  translated strings. This breaks now once every history file
	  but afterwards this will be stable

2009-01-24 Enrico Weigelt <weigelt@metux.de>

	* src/cmd.c: fixed bug #35 (do_view_cmd is now calling repaint_screen())

2009-01-24 Patrick Winnertz <winnie@debian.org>

	* edit/editcmd.c: Fix some issues about regex:
	  - prevent . to match a newline (\n)
	  - match from start of line and not from cursor position

2009-01-18 Patrick Winnertz <winnie@debian.org>

	* edit/editdraw.c: Moved var into if clause as it's only used
	there
	* edit/editlock.c: Removed unnecessary arguement to if condition
	* src/cmd.c: Removed unused pointer
	* src/hotlist.c: Removed unused function save_group
	* src/main.c: Removed unused function do_mc_filename_rename
	* src/util.c: Removed unused struct whentm

2009-01-16 Enrico Weigelt, metux IT service <weigelt@metux.de>

	* src/subshell: setting subshell pty to close-on-exec 
	  (taken from mandriva patches)

2009-01-14 Slava Zanko <slavazanko@gmail.com>

	* lib/mc.ext.in: change filemask for recognize 7z-files
	* vfs/extfs/u7z: 
	  - change only LC_DATE global variable for correct work with arhive;
	  - add sorting by filename in output of list files

2009-01-12 Patrick Winnertz <winnie@debian.org>

	* AUTHORS: Added Enrico Weigelt, Slava Zanko and 
	Patrick Winnertz as authors 

2009-01-11 Patrick Winnertz <winnie@debian.org>

	* syntax/pascal.syntax: Added syntax highlighting for 
	some delphi keywords

2008-12-18  Roland Illig  <roland.illig@gmx.de>

	* doc/mcedit.1: Documented the newly added filename:lineno
	invocation method.

2008-02-19  Pavel Roskin  <proski@gnu.org>

	* doc/hu/mc.1.in: Fix description for M-u and M-H.  Reported by
	Bozo Lajos.
